# Morvex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: dependabot_automerge.yml  dependabot_sweep.yml
chat_with_agent/: PYTORCH_README.md  PYTORCH_SUMMARY.md  VERSION_COMPARISON.md
docs/: index.html
docs/assets/htmls/: basic_example.html
examples/: pytorch_nn_example.py
examples/data/: fin_whale_song.npz  signal.npz
examples/marimo_notebooks/: basic_example.py  compare_cwt.py  filter_bank.py  plot_xgrams.py
src/morletx/: _base.py  _core_torch.py  _core_torch_nn.py
src/morletx/utils/: array_utils_torch.py  fft_utils_torch.py
src/morvex/: __init__.py  _core.py  _plotting.py  _wavelet_base.py  filter_bank.py  plotting.py  tapering.py  wavelet.py  wavelet_group.py  xcorr.py
src/morvex/utils/: array_utils.py  fft_utils.py  logging_utils.py
tests/: test_core.py  test_filter_bank.py  test_tapering.py  test_wavelet_base.py  test_xcorr.py
