[project]
name = "morvex"
version = "0.1.0"
description = ""
authors = [
    { name = "Nima Nooshiri", email = "nima.nooshiri@gmail.com" }
]
readme = "README.md"
license = 'MIT'
license-files = ['LICENSE']
requires-python = ">=3.12"
dependencies = [
    "cmcrameri>=1.9",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pydantic>=2.12.5",
    "pyqt5>=5.15.11",
    "scipy>=1.16.2",
]

[project.optional-dependencies]
torch-cpu = ["torch>=2.9.0"]
torch-cu128 = ["torch>=2.9.0"]
plotly = ["plotly>=6.5.2"]

[build-system]
requires = ["uv_build>=0.8.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "marimo>=0.15.5",
    "pre-commit>=4.3.0",
    "prek>=0.3.3",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]

[tool.uv]
conflicts = [
  [
    { extra = "torch-cpu" },
    { extra = "torch-cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { extra = "torch-cpu", index = "pytorch-cpu" },
  { extra = "torch-cu128", index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.pyright]
typeCheckingMode = "off"
